--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wagtail-reading-time",
-  "version": "1.0.0b1",
+  "version": "1.1.0",
   "author": "Damon Jagger",
   "license": "MIT",
   "scripts": {
